security(yarn): Override vulnerable packages

--- a/package.json
+++ b/package.json
@@ -63,7 +63,25 @@
     "@types/relay-runtime": "18.1.1",
     "graceful-fs": "4.x.x",
     "styled-components": "^6.1.13",
-    "strip-ansi": "6.0.1"
+    "strip-ansi": "6.0.1",
+    "backslash@0.2.1": "0.2.0",
+    "chalk-template@1.1.1": "1.1.0",
+    "supports-hyperlinks@4.1.1": "4.1.0",
+    "has-ansi@6.0.1": "6.0.0",
+    "simple-swizzle@0.2.3": "0.2.2",
+    "color-string@2.1.1": "2.1.0",
+    "error-ex@1.3.3": "1.3.2",
+    "color-name@2.0.1": "2.0.0",
+    "is-arrayish@0.3.3": "0.3.2",
+    "slice-ansi@7.1.1": "7.1.0",
+    "color-convert@3.1.1": "3.1.0",
+    "wrap-ansi@9.0.1": "9.0.0",
+    "ansi-regex@6.2.1": "6.2.0",
+    "supports-color@10.2.1": "10.2.0",
+    "strip-ansi@7.1.1": "7.1.0",
+    "chalk@5.6.1": "5.6.0",
+    "debug@4.4.2": "4.4.1",
+    "ansi-styles@6.2.2": "6.2.1"
   },
   "dependencies": {
     "@artsy/cohesion": "4.299.0",
