fix(deps): fix critical vulnerabilities, add SECURITY.md

--- a/package.json
+++ b/package.json
@@ -63,7 +63,11 @@
     "@types/relay-runtime": "18.1.1",
     "graceful-fs": "4.x.x",
     "styled-components": "^6.1.13",
-    "strip-ansi": "6.0.1"
+    "strip-ansi": "6.0.1",
+    "cipher-base": "^1.0.5",
+    "form-data": "^4.0.4",
+    "lodash": "^4.17.21",
+    "sha.js": "^2.4.12"
   },
   "dependencies": {
     "@artsy/cohesion": "4.299.0",
@@ -115,7 +119,7 @@
     "ejs": "3.1.10",
     "eventemitter3": "4.0.7",
     "express": "4.19.2",
-    "express-ipfilter": "0.2.1",
+    "express-ipfilter": "~0.2",
     "express-request-id": "1.4.0",
     "farce": "0.4.5",
     "formik": "^2.2.9",
@@ -129,7 +133,7 @@
     "http-shutdown": "1.2.1",
     "ip": "^1.1.9",
     "isomorphic-fetch": "^2.2.1",
-    "jsdom": "20.0.0",
+    "jsdom": "~20.0",
     "jwt-decode": "2.2.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
@@ -176,7 +180,7 @@
     "sharify": "0.1.6",
     "styled-components": "^6.1.13",
     "styled-system": "5.1.5",
-    "superagent": "3.8.3",
+    "superagent": "~3.8",
     "tti-polyfill": "0.2.2",
     "underscore.string": "3.3.5",
     "unleash-client": "^6.5.0",
