feat(package): add check-npm-vulnerabilities script

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bundle-report:client": "BUNDLE_ANALYZE=true yarn build:client:prod",
     "bundle-report:server": "BUNDLE_ANALYZE=true yarn build:server:prod",
     "bundle-stats": "GENERATE_STATS_FILE=true yarn bundle-report:client && npx relative-ci-agent",
+    "check-npm-vulnerabilities": "yarn npm audit --severity critical --recursive",
     "clean": "scripts/clean.sh",
     "clean:relay": "rm -rf '$TMPDIR'/RelayFindGraphQLTags-*",
     "danger:ci": "yarn danger ci --verbose",
@@ -119,7 +120,7 @@
     "ejs": "3.1.10",
     "eventemitter3": "4.0.7",
     "express": "4.19.2",
-    "express-ipfilter": "~0.2",
+    "express-ipfilter": "0.2.6",
     "express-request-id": "1.4.0",
     "farce": "0.4.5",
     "formik": "^2.2.9",
@@ -133,7 +134,7 @@
     "http-shutdown": "1.2.1",
     "ip": "^1.1.9",
     "isomorphic-fetch": "^2.2.1",
-    "jsdom": "~20.0",
+    "jsdom": "20.0.3",
     "jwt-decode": "2.2.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
@@ -180,7 +181,7 @@
     "sharify": "0.1.6",
     "styled-components": "^6.1.13",
     "styled-system": "5.1.5",
-    "superagent": "~3.8",
+    "superagent": "3.8.3",
     "tti-polyfill": "0.2.2",
     "underscore.string": "3.3.5",
     "unleash-client": "^6.5.0",
